2011-03-07  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable/jim.c: Update get/set prototypes enough so that the code
    will at least compile again.

  * MAINTAINERS: Update paths to Blackfin related files.

2011-02-24  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable/ft2232.c: Rename user-facing cable string from
    "USB<=>JTAG&RS232" to "USB-JTAG-RS232" by Orasanu Lucian.

2011-02-22  Mike Frysinger  <vapier@gentoo.org>

  * src/cmd/cmd_print.c: Add a completion handler.

  * src/cmd/cmd_debug.c: Add a completion handler.

  * src/global/parse.c (urj_parse_stream): Do not call "quit" when we hit the
    end of a stream.  Simply return success so we can handle nested cases.

  * src/global/parse.c (urj_parse_line): Include the line when debugging.

  * src/cmd/cmd_get.c, src/cmd/cmd_set.c, src/cmd/cmd_test.c: Fix up help text
    from an earlier commit -- make sure the literal "signal" is the 2nd arg in
    the help text and for completion handlers.

  * src/cmd/cmd_flashmem.c: Add a completion handler.
  * src/cmd/cmd_endian.c: Likewise.
  * src/cmd/cmd_readmem.c: Likewise.

2011-02-21  Mike Frysinger  <vapier@gentoo.org>

  * data/Makefile.am (nobase_dist_pkgdata_DATA): Add missing analog/bfin/bfin.

2011-02-19  Mike Frysinger  <vapier@gentoo.org>

  * src/cmd/cmd_bfin.c (cmd_bfin_run): Make sure the part is a Blackfin before
    we try calling functions that don't exist and segfault.

  * include/urjtag/parse.h, src/global/parse.c: Split tokenization of lines out
    of urj_parse_line and into its own function urj_tokenize_lines.  This lets
    us reuse this code elsewhere.

  * include/urjtag/cmd.h, src/apps/jtag/jtag.c, src/cmd/cmd.h,
    src/cmd/cmd_cmd.c: Rewrite command completion so that sub-options to
    commands may be completed as well.  Those commands must implement their
    own sub-completion handlers in order to support this.
  * src/cmd/cmd_bfin.c, src/cmd/cmd_cable.c, src/cmd/cmd_get.c,